# MemState

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  memstate.kuzu.wal  pyproject.toml
.claude/: launch.json
.cursor/: hooks.json
.cursor/hooks/: after-file-edit-doc-flag.ps1  stop-doc-followup.ps1
.cursor/rules/: memstate-web-docs.mdc
docs/: index.html  operations.html  styles.css
docs-site/: api.html  architecture.html  data-model.html  index.html  styles.css
docs-site/api/: index.html
docs-site/architecture/: http-stack.html  overview.html  storage.html
docs-site/data-model/: diagram.html  limits-and-config.html  overview.html
docs-site/js/: nav.js
docs-site/operations/: forget.html  ingest.html  low-level.html  query.html  revision.html  run-config.html
docs/api/: index.html
docs/architecture/: http-stack.html  overview.html  reasoning.html  storage.html
docs/data-model/: diagram.html  fields.html  limits-and-config.html  overview.html  relationships.html
docs/developer/: index.html
docs/developers/: quickstart.html
docs/guides/: README.md  api-reference.md  authentication.md  configuration.md  data-model.md  docker.md  llm-providers.md  quickstart.md
docs/js/: nav.js
docs/operations/: forget.html  high-level.html  ingest.html  low-level.html  query.html  revision.html  run-config.html
src/memstate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
tests/: test_agent_viz.py  test_field_history_tools.py  test_study.py  test_system_context.py  test_text_chunking.py  test_topic_fields.py
(+65 files in other folders)
