[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memstate"
version = "0.1.0"
description = "Topic graph memory on embedded Kuzu (UEM-style ingest + query)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kuzu>=0.11.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "numpy>=1.26",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
embedding = ["fastembed>=0.2.0"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.1"]

[project.scripts]
memstate-api = "memstate.api.cli:main"
memstate-llm-mcp = "memstate.llm.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memstate = ["api/static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
